# RegKnots

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  alembic.ini  celery_beat.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_add_content_hash.py  0003_add_vessel_imo_mmsi.py  0004_citation_errors.py  0005_add_colregs_source.py  0006_add_nvic_source.py  0007_route_types_array.py  0008_password_reset_tokens.py  0009_add_solas_source.py  0010_stripe_subscription_fields.py  0011_waitlist.py  0012_add_solas_supplement_source.py  0013_add_erg_source.py  0013_trial_14_days.py  0014_add_erg_source.py  0014_add_is_admin.py  0015_add_trial_reminder_sent.py  0016_add_revoked_at_to_refresh_tokens.py  0017_create_pilot_survey_responses.py  0018_extend_vessel_profile_fields.py  0019_create_vessel_documents.py  0020_add_is_internal_and_subscription_status.py  0021_remove_paused_from_subscription_status.py  0022_add_billing_detail_columns_and_paused_status.py  0023_add_chief_engineer_role.py  0024_add_stcw_source.py  0025_add_email_verification.py  0026_add_stcw_supplement_source.py  0027_create_support_tickets.py  0028_add_founding_email_sent.py  0029_add_ism_source.py  0030_cascade_citation_errors_and_clear_test_data.py  0031_create_notifications.py  0032_add_erg_source.py  0033_add_fulltext_trigram_index.py  (+80 more)
apps/api/app/: config.py  db.py  email.py  main.py  plans.py  plans_workspace.py  stripe_service.py  tasks.py  traffic_analytics.py  worker.py
docs/: PROJECT_STATE.md  (+13 more)
(+271 files in other folders)
